# usdCornellBox

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
cmake/: FindPixarUsd.cmake
extra_runtime/: launcher.bat
